--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,10 @@
 [submodule "linux"]
 	path = linux
-	url = https://github.com/torvalds/linux.git
+    url = https://github.com/torvalds/linux.git
+    branch = master
+    ignore = dirty
 [submodule "buildroot"]
 	path = buildroot
 	url = https://github.com/buildroot/buildroot.git
+    branch = master
+    ignore = dirty
