--- a/cfg/linux_defconfig
+++ b/cfg/linux_defconfig
@@ -1172,7 +1172,8 @@ CONFIG_E1000E=y
 # CONFIG_IGC is not set
 CONFIG_NET_VENDOR_MICROSOFT=y
 # CONFIG_JME is not set
-# CONFIG_NET_VENDOR_LITEX is not set
+CONFIG_NET_VENDOR_LITEX=y
+CONFIG_LITEX_LITEETH=y
 CONFIG_NET_VENDOR_MARVELL=y
 # CONFIG_MVMDIO is not set
 # CONFIG_SKGE is not set
@@ -2847,7 +2848,7 @@ CONFIG_RPMSG_VIRTIO=y
 CONFIG_IRQCHIP=y
 # CONFIG_AL_FIC is not set
 CONFIG_RISCV_INTC=y
-# CONFIG_SIFIVE_PLIC is not set
+CONFIG_SIFIVE_PLIC=y
 # end of IRQ chip support
 
 # CONFIG_IPACK_BUS is not set
