Remove Litex from Linux config

--- a/cfg/linux_defconfig
+++ b/cfg/linux_defconfig
@@ -1172,8 +1172,7 @@ CONFIG_E1000E=y
 # CONFIG_IGC is not set
 CONFIG_NET_VENDOR_MICROSOFT=y
 # CONFIG_JME is not set
-CONFIG_NET_VENDOR_LITEX=y
-CONFIG_LITEX_LITEETH=y
+# CONFIG_NET_VENDOR_LITEX is not set
 CONFIG_NET_VENDOR_MARVELL=y
 # CONFIG_MVMDIO is not set
 # CONFIG_SKGE is not set
@@ -1555,7 +1554,6 @@ CONFIG_SERIAL_SIFIVE_CONSOLE=y
 # CONFIG_SERIAL_FSL_LINFLEXUART is not set
 # CONFIG_SERIAL_CONEXANT_DIGICOLOR is not set
 # CONFIG_SERIAL_SPRD is not set
-# CONFIG_SERIAL_LITEUART is not set
 # end of Serial drivers
 
 CONFIG_SERIAL_MCTRL_GPIO=y
@@ -2819,8 +2817,7 @@ CONFIG_RPMSG_VIRTIO=y
 #
 # Enable LiteX SoC Builder specific drivers
 #
-CONFIG_LITEX=y
-CONFIG_LITEX_SOC_CONTROLLER=y
+# CONFIG_LITEX_SOC_CONTROLLER is not set
 # end of Enable LiteX SoC Builder specific drivers
 
 #
