--- a/cfg/linux_defconfig
+++ b/cfg/linux_defconfig
@@ -281,7 +281,8 @@ CONFIG_NR_CPUS=32
 CONFIG_HOTPLUG_CPU=y
 CONFIG_TUNE_GENERIC=y
 # CONFIG_NUMA is not set
-# CONFIG_RISCV_ISA_C is not set
+CONFIG_RISCV_ISA_C=y
+CONFIG_RISCV_ISA_A=y
 CONFIG_FPU=y
 # end of Platform type
 
