--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "opensbi"]
 	path = opensbi
 	url = https://github.com/black-parrot-sdk/opensbi
+[submodule "u-boot"]
+	path = u-boot
+	url = https://github.com/u-boot/u-boot
