Use buildroot to build linux

--- a/cfg/linux_defconfig
+++ b/cfg/linux_defconfig
@@ -30,7 +30,7 @@ CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_INIT=""
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME="blackparrot"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
@@ -164,7 +164,7 @@ CONFIG_CHECKPOINT_RESTORE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE=""
+CONFIG_INITRAMFS_SOURCE="../cfg/initramfs.txt ../work/buildroot/images/rootfs.cpio"
 CONFIG_RD_GZIP=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
@@ -235,7 +235,7 @@ CONFIG_ARCH_MMAP_RND_BITS_MAX=24
 CONFIG_RISCV_SBI=y
 CONFIG_MMU=y
 CONFIG_VA_BITS=39
-CONFIG_PA_BITS=56
+CONFIG_PA_BITS=40
 CONFIG_PAGE_OFFSET=0xffffffe000000000
 CONFIG_ARCH_FLATMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
