--- a/cfg/buildroot_defconfig
+++ b/cfg/buildroot_defconfig
@@ -29,7 +29,7 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="6.6"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="../cfg/linux_defconfig"
-BR2_LINUX_KERNEL_PATCH="../patches/"
+BR2_LINUX_KERNEL_PATCH="../../patches/linux/linux"
 BR2_LINUX_KERNEL_VMLINUX=y
 
 # Configure Rootfs
